--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to send secret messages",
   "default": "index.html",
   "dependencies": {
-    "parcel": "^2.0.0-nightly.551"
+    "parcel": "^2.0.0-beta.1"
   },
   "devDependencies": {},
   "scripts": {
